--- a/style.css
+++ b/style.css
@@ -29,3 +29,19 @@ body {
     font-size: 25px;
     font-weight: bold;
 }
+
+h4 {
+    background-color: #f5f5f5;
+    line-height: 2;
+    margin: 0px;
+    font-weight: bold;
+}
+
+.modal-dialog {
+    width: 90%;
+}
+
+.instruction_image{
+    display: inline-block;
+    width: 45%;
+}
